--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
               <li class="nav-item btn btn-dark m-2">
                 <a class="active text-light text-decoration-none" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item m-2">
+              <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Car Report</a>
               </li>
-              <li class="nav-item m-2">
+              <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Heavy Duty Truck Report</a>
               </li>
-              <li class="nav-item m-2">
+              <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Motor Bikes Report</a>
               </li>
-              <li class="nav-item m-2">
+              <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">About us</a>
               </li>
-              <li class="nav-item m-2">
+              <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Privacy Policy</a>
               </li>
-              <li class="nav-item m-2">
+              <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Contact us</a>
               </li>
              
@@ -315,7 +315,7 @@
     </div>
   </div>
 </section>
-<section class="section-7">
+<section class="section-7 pb-5">
   <div class="container bg-danger rounded-3 my-5 ">
 <div class="row">
   <div class="col-lg-6 p-5 text-light ">
@@ -328,7 +328,22 @@
 </div>
   </div>
 </section>
-
+<footer class="container-fluid bg-footer py-5">
+  <div class="container py-5">
+    <div class="row py-4" style="border-bottom:2px solid black ;">
+     <h2 class="text-danger display-5 fw-semibold col-lg-9">The VIN Report</h2>
+     <p class="col-lg-3  py-3" style="font-weight: 500;"><img src="./images/envelope.svg" alt="">  info@thevinreport.com</p>
+    </div>
+    <ul class="d-flex my-5 flex-wrap">
+      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Home</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Car Report</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Heavy Duty Truck Report</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Motor Bikes Report</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">About us</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Contact us</a></li>
+    </ul>
+  </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
