--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid container-xxl">
-          <a class="navbar-brand" href="#"><img src="../images/logo.png" width="200px" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="./images/logo.png" width="200px" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,7 +62,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-6 py-5">
-                    <img src="../images/car-2.jpg" class="w-100 rounded-3" alt="">
+                    <img src="./images/car-2.jpg" class="w-100 rounded-3" alt="">
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
         <div class="container-fluid container-xxl">
             <div class="row  my-5">
                 <div class="col-lg-6 p-0">
-                    <img src="../images/car-3.jpg" class="w-100 rounded-img" alt="">
+                    <img src="./images/car-3.jpg" class="w-100 rounded-img" alt="">
                 </div>
                 <div class="col-lg-6 d-flex justify-content-center flex-column p-5">
                     <h1 class="fs-3 fw-semibold">HOW DOES <span class="text-danger">Thevinreport</span> GET THEIR INFORMATION?</h1>
@@ -91,7 +91,7 @@
                 <div class="row justify-content-center py-3">
                     <div class="col-lg-4 col-md-6 my-2 ">
                         <div class="card shadow h-card" >
-                            <img src="../images/car-1.jpg" class="card-img-top" alt="...">
+                            <img src="./images/car-1.jpg" class="card-img-top" alt="...">
                             <div class="card-body pt-5">
                               <h5 class="card-title">Car Report</h5>
                               <p class="card-text text-secondary py-2">How can the past of a car be researched?</p>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 my-2 ">
                         <div class="card shadow h-card" >
-                            <img src="../images/truck-1.jpg" class="card-img-top" alt="...">
+                            <img src="./images/truck-1.jpg" class="card-img-top" alt="...">
                             <div class="card-body pt-5">
                               <h5 class="card-title">Heavy Duty Truck Report</h5>
                               <p class="card-text text-secondary py-2">We're your operations backbone for construction, logistics, and more.</p>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 my-2 ">
                         <div class="card shadow h-card" >
-                            <img src="../images/bike-2.jpg" class="card-img-top" alt="...">
+                            <img src="./images/bike-2.jpg" class="card-img-top" alt="...">
                             <div class="card-body pt-5">
                               <h5 class="card-title">Motor Bikes Reports</h5>
                               <p class="card-text text-secondary py-2">Inspection Report for Comprehensive Motorcycles.</p>
