--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesozme/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css" integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item  m-2">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Home</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item m-2 btn btn-dark">
                 <a class="active text-light text-decoration-none" aria-current="page" href="#">Car Report</a>
@@ -38,7 +38,7 @@
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Motor Bikes Report</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">About us</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./About.html">About us</a>
               </li>
               <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Privacy Policy</a>
@@ -80,7 +80,7 @@
             </div>
         </div>
       </section>
-      <section class="py-5 position-relative h-sec-card container-xxl container-fluid"   >
+      <section class="py-5 my-5 position-relative h-sec-card container-xxl container-fluid"   >
         <div class="container-fluid container-xxl  ">
         <div class="bg-car  container-fluid container-xxl d-flex flex-column justify-content-center ">
             <h1 class="text-light display-4 px-5 fw-semibold">HOW TO CONDUCT A VEHICLE INSPECTION USING The VIN Report</h1>
