--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item btn btn-dark m-2">
-                <a class="active text-light text-decoration-none" aria-current="page" href="#">Home</a>
+                <a class="active text-light text-decoration-none" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Car Report</a>
@@ -37,7 +37,7 @@
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Motor Bikes Report</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">About us</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./About.html">About us</a>
               </li>
               <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Privacy Policy</a>
