Files and folder

--- a/About.html
+++ b/About.html
@@ -28,23 +28,23 @@
               <li class="nav-item  m-2">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
               </li>
+              <li class="nav-item m-2 text-center">
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Car-report.html">Car Report</a>
+              </li>
+              <li class="nav-item m-2 text-center">
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Heavy-Duty-Truck.html">Heavy Duty Truck Report</a>
+              </li>
+              <li class="nav-item m-2 text-center">
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Motor-Bykes-Report.html">Motor Bikes Report</a>
+              </li>
               <li class="nav-item m-2 btn btn-dark">
-                <a class="active text-light text-decoration-none" aria-current="page" href="#">Car Report</a>
+                <a class="active text-light text-decoration-none" aria-current="page" href="./About.html">About us</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Heavy Duty Truck Report</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Privacy-Policy.html">Privacy Policy</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Motor Bikes Report</a>
-              </li>
-              <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="./About.html">About us</a>
-              </li>
-              <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Privacy Policy</a>
-              </li>
-              <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Contact us</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Contact-us.html">Contact us</a>
               </li>
              
               
@@ -132,12 +132,12 @@
            <p class="col-lg-3  py-3" style="font-weight: 500;"><img src="./images/envelope.svg" alt="">  info@thevinreport.com</p>
           </div>
           <ul class="d-flex my-5 flex-wrap">
-            <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Home</a></li>
-            <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Car Report</a></li>
-            <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Heavy Duty Truck Report</a></li>
-            <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Motor Bikes Report</a></li>
-            <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">About us</a></li>
-            <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Contact us</a></li>
+            <li style="list-style: none;" class="pe-5 py-3"><a href="./index.html" class="text-decoration-none text-dark">Home</a></li>
+            <li style="list-style: none;" class="pe-5 py-3"><a href="./Car-report.html" class="text-decoration-none text-dark">Car Report</a></li>
+            <li style="list-style: none;" class="pe-5 py-3"><a href="./Heavy-Duty-Truck.html" class="text-decoration-none text-dark">Heavy Duty Truck Report</a></li>
+            <li style="list-style: none;" class="pe-5 py-3"><a href="./Motor-Bykes-Report.html" class="text-decoration-none text-dark">Motor Bikes Report</a></li>
+            <li style="list-style: none;" class="pe-5 py-3"><a href="./About.html" class="text-decoration-none text-dark">About us</a></li>
+            <li style="list-style: none;" class="pe-5 py-3"><a href="./Contact-us.html" class="text-decoration-none text-dark">Contact us</a></li>
           </ul>
         </div>
       </footer>
