--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="active text-light text-decoration-none" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Car Report</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Car-report.html">Car Report</a>
               </li>
               <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="#">Heavy Duty Truck Report</a>
