--- a/Car-report.html
+++ b/Car-report.html
@@ -24,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item  m-2">
+          <li class="nav-item text-center m-2">
             <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item m-2 btn btn-dark">
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <section style="height: 450px;">
+  <section style="min-height: 450px;">
     <div class="container text-center py-5 d-flex flex-column align-items-center justify-content-center h-100 ">
      <h1 class="display-5 fw-semibold text-danger">Always get a car examined before purchasing it.</h1>
      <p class="text-secondary fs-5">How can I verify the history of a car imported from the United States/Canada? thevinreport.com is the most dependable company for gathering correct information on cars by VIN for a fixed charge and providing a thorough report. Simple, quick, and, most importantly, effective.</p>
@@ -153,4 +153,5 @@
       </ul>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
