--- a/Contact-us.html
+++ b/Contact-us.html
@@ -24,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item  m-2">
+          <li class="nav-item text-center m-2">
             <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item m-2 text-center">
@@ -33,7 +33,7 @@
           <li class="nav-item m-2 text-center">
               <a class="active nav-link text-decoration-none" aria-current="page" href="./Heavy-Duty-Truck.html">Heavy Duty Truck Report</a>
             </li>
-            <li class="nav-item m-2 ">
+            <li class="nav-item m-2 text-center">
               <a class="active nav-link text-decoration-none" aria-current="page" href="Motor-Bykes-Report.html">Motor Bikes Report</a>
             </li>
           <li class="nav-item m-2 text-center">
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <section style="height: 450px;">
+  <section style="min-height: 450px;">
     <div class="container text-center py-5 d-flex flex-column align-items-center justify-content-center h-100 ">
      <h1 class="display-3 fw-semibold text-danger">Contact Us.</h1>
      <p class="text-secondary fs-5">Feel free to reach out to us with any questions or inquiries. We're here to assist you in any way we can.</p>
@@ -110,4 +110,5 @@
       </ul>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
