--- a/Heavy-Duty-Truck.html
+++ b/Heavy-Duty-Truck.html
@@ -24,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item  m-2">
+          <li class="nav-item text-center  m-2">
             <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item m-2 text-center">
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <section style="height: 450px;">
+  <section style="min-height: 450px;">
     <div class="container text-center py-5 d-flex flex-column align-items-center justify-content-center h-100 ">
      <h1 class="display-6 fw-semibold text-danger">It's always advisable to have a thorough inspection of a truck before making a purchase.</h1>
      <p class="text-secondary fs-5">To verify the history of a truck imported from the United States, thevinreport.com is your trusted source. They are known for their reliability in gathering accurate information about trucks through their VIN-based service for a fixed fee. Their reports are comprehensive, and the process is simple, quick, and, most importantly, highly effective in providing the information you need to make an informed decision.</p>
@@ -153,4 +153,5 @@
       </ul>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
