--- a/Motor-Bykes-Report.html
+++ b/Motor-Bykes-Report.html
@@ -24,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item  m-2">
+          <li class="nav-item text-center m-2">
             <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item m-2 text-center">
@@ -53,7 +53,7 @@
     </div>
   </nav>
 
-  <section style="height: 450px;">
+  <section style="min-height: 450px;">
     <div class="container text-center py-5 d-flex flex-column align-items-center justify-content-center h-100 ">
      <h1 class="display-6 fw-semibold text-danger">It's always a wise choice to have a bike thoroughly inspected before making a purchase.</h1>
      <p class="text-secondary fs-5">To verify the history of a bike imported from the United States, you can rely on thevinreport.com, a trusted company that specializes in gathering accurate information based on a bike's VIN for a fixed fee. They provide a comprehensive report that is not only simple and quick but, most importantly, highly effective in providing you with the information you need to make an informed decision.</p>
@@ -153,4 +153,5 @@
       </ul>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
