--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -24,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item  m-2">
+          <li class="nav-item text-center m-2">
             <a class="active nav-link text-decoration-none" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item m-2 text-center">
@@ -135,4 +135,5 @@
     </ul>
   </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
