--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 <a class="active nav-link text-decoration-none" aria-current="page" href="./Car-report.html">Car Report</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Heavy Duty Truck Report</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Heavy-Duty-Truck.html">Heavy Duty Truck Report</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Motor Bikes Report</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Motor-Bykes-Report.html">Motor Bikes Report</a>
               </li>
               <li class="nav-item m-2 text-center">
                 <a class="active nav-link text-decoration-none" aria-current="page" href="./About.html">About us</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Privacy Policy</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Privacy-Policy.html">Privacy Policy</a>
               </li>
               <li class="nav-item m-2 text-center">
-                <a class="active nav-link text-decoration-none" aria-current="page" href="#">Contact us</a>
+                <a class="active nav-link text-decoration-none" aria-current="page" href="./Contact-us.html">Contact us</a>
               </li>
              
               
