--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        <div class="container p-3 d-flex flex-column align-items-center justify-content-center" style="min-height: 600px;">
      <h1 class="display-6 text-light text-center fw-bold">Secure the Most Economical Vehicle History Report with Just One Click.</h1>
      <p class="text-center text-secondary">Cruise through peace of mind as you effortlessly access the most budget-friendly vehicle history reports, all with a simple click.</p>
-     <a class="btn btn-danger my-5 fw-semibold py-3">Get Report</a>
+     <a class="btn btn-danger my-5 fw-semibold py-3" href="./SignIn.html">Get Report</a>
        </div>
        </section>
        <section class="section-2">
@@ -191,7 +191,7 @@
       <div class="card bg-danger p-4 pt-5 h-price-card my-2">
       <p class="fs-5"><span class="badge text-bg-light p-2">Car Report</span> <span class="badge text-bg-dark p-2 mx-3">Instant</span></p>
       <h3 class="display-5 fw-semibold text-light py-2">$33.99<span style="font-size: 15px;">/in 30 Minutes</span></h3>
-      <a href="" class="btn btn-light fw-semibold p-2">Buy Now</a>
+      <a href="./SignIn.html" class="btn btn-light fw-semibold p-2">Buy Now</a>
       <div class="bg-light list-h mt-5 rounded-3 py-3">
         <ul class="price-list text-secondary">
           <li class="my-3"><img src="./images/tick.svg" width="20" height="20" alt=""> HQ Car Images</li>
@@ -211,7 +211,7 @@
       <div class="card bg-danger p-4 pt-5 h-price-card my-2">
       <p class="fs-5"><span class="badge text-bg-light p-2">Heavy-duty vehicles</span> <span class="badge text-bg-dark p-2 mx-3">Instant</span></p>
       <h3 class="display-5 fw-semibold text-light py-2">$33.99<span style="font-size: 15px;">/in 30 Minutes</span></h3>
-      <a href="" class="btn btn-light fw-semibold p-2">Buy Now</a>
+      <a href="./SignIn.html" class="btn btn-light fw-semibold p-2">Buy Now</a>
       <div class="bg-light list-h mt-5 rounded-3 py-3">
         <ul class="price-list text-secondary">
           <li class="my-3"><img src="./images/tick.svg" width="20" height="20" alt=""> HQ Car Images</li>
@@ -231,7 +231,7 @@
       <div class="card bg-danger p-4 pt-5 h-price-card my-2">
       <p class="fs-5"><span class="badge text-bg-light p-2">Motor Bikes Report</span> <span class="badge text-bg-dark p-2 mx-3">Instant</span></p>
       <h3 class="display-5 fw-semibold text-light py-2">$30.99<span style="font-size: 15px;">/in 30 Minutes</span></h3>
-      <a href="" class="btn btn-light fw-semibold p-2">Buy Now</a>
+      <a href="./SignIn.html" class="btn btn-light fw-semibold p-2">Buy Now</a>
       <div class="bg-light list-h mt-5 rounded-3 py-3">
         <ul class="price-list text-secondary">
           <li class="my-3"><img src="./images/tick.svg" width="20" height="20" alt=""> HQ Car Images</li>
@@ -335,12 +335,12 @@
      <p class="col-lg-3  py-3" style="font-weight: 500;"><img src="./images/envelope.svg" alt="">  info@thevinreport.com</p>
     </div>
     <ul class="d-flex my-5 flex-wrap">
-      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Home</a></li>
-      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Car Report</a></li>
-      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Heavy Duty Truck Report</a></li>
-      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Motor Bikes Report</a></li>
-      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">About us</a></li>
-      <li style="list-style: none;" class="pe-5 py-3"><a href="" class="text-decoration-none text-dark">Contact us</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="./index.html" class="text-decoration-none text-dark">Home</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="./Car-report.html" class="text-decoration-none text-dark">Car Report</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="./Heavy-Duty-Truck.html" class="text-decoration-none text-dark">Heavy Duty Truck Report</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="./Motor-Bykes-Report.html" class="text-decoration-none text-dark">Motor Bikes Report</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="./About.html" class="text-decoration-none text-dark">About us</a></li>
+      <li style="list-style: none;" class="pe-5 py-3"><a href="./Contact-us.html" class="text-decoration-none text-dark">Contact us</a></li>
     </ul>
   </div>
 </footer>
